--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       - name: python script
         run: |
           
-          python $file 3 
+          python $file 3 15
       
       
       
