--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,13 @@ on:
       input-num-1:
         description: 'first-num'
         required: true
+        default: 'first'
         
       
       input-num-2:
         description: 'second-num'
         required: true
+        default: 'first'
         
         
   #push:
